# variate

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  sonar-project.properties  vcpkg.json
.github/workflows/: build.yml
cmake/: VariateCompileOptions.cmake  VariateCoverage.cmake  VariateGitHooksInstaller.cmake  VariateInstallGitHooks.cmake  VariateInstallation.cmake
cmake/hooks/: VariatePreCommit.cmake.in  pre-commit.in
example/: CMakeLists.txt  example.cpp
src/: CMakeLists.txt  variate.cpp
src/variate/: variate.hpp  variate_impl.hpp
test/: CMakeLists.txt  boost_tests.cpp  boost_variant_adaptation.hpp  main.cpp  no_boost_tests.cpp  test.hpp  test_boost.hpp
test/test/: framework.cpp  framework.hpp  precompiled_header.hpp  source_location.hpp  type_name.hpp  utility.hpp
